improvemnts to the bookmarek feature
